--- a/less/blocks/_pancakes.less
+++ b/less/blocks/_pancakes.less
@@ -181,8 +181,13 @@
 }
 
 .slider-button__img {
-    width: 10px;
-    height: 14px;
+	display: none;
+
+	@media(min-width: 768px) {
+		display: block;
+    	width: 10px;
+    	height: 14px;
+	}
 
 	@media(min-width: 1200px) {
     	height: 19px;
